# ft-inceptionv3-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_main.py
.github/workflows/: docker-image.yml
grafana/: values.yaml
k8s/api/: deployment.yaml
model/: model.py
